# Math5593LinearProgrammingProject

./: .gitignore  README.md  pyproject.toml
Code/: Main.ipynb
models/: L Reg Attempt.mod  mtcars.mod
notes/: abstract.md
slides/tex/: background.tex  cubeamer.cls  implementation.tex  intro.tex  main.tex  main.vrb  results.tex
slides/tex/_minted/: 0E1F011CD0835781621FFD71BA048B74.highlight.minted  FCBC2D0F8688F554FEEC8E66F358E0E2.highlight.minted  _FAD58DE7366495DB4650CFEFAC2FCD61.index.minted
src/: lasso-example-mtcars.py  lasso-example.mtcars.py  lasso-example.py  load-pandas-into-amplpy.py  main.ipynb
