[project]
name = "math5593linearprogrammingproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Brady Lamson",email = "lamsonbrady@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn (>=1.7.2,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "plotly (>=6.4.0,<7.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "amply (>=0.1.6,<0.2.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "amplpy (>=0.15.2,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
